--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html>
     <body>
         <h1>Hello World</h1>
-            <p>I'm hosted with GitHub Pages. Christopher.</p>
+            <p>I'm hosted with Flask! Christopher.</p>
         <h2>TESTING</h2>
     </body>
 </html>
