--- a/templates/index.html
+++ b/templates/index.html
@@ -4,30 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <title>NomeWork</title>
+    <title>Document</title>
 </head>
 <body>
-    <div id="menu">
-        <div id="menu-items">
-          <!-- I made these divs instead of links so you can click on mobile to view the effect -->
-          <a class="menu-item">Home</a>
-          <a class="menu-item">Shop</a>
-          <a class="menu-item">About</a>
-          <a class="menu-item">Contact Us</a>
-        </div>
-        <div id="menu-background-pattern"></div>
-        <div id="menu-background-image"></div>
-      </div>
-      
-      <a id="source-link" class="meta-link" href="http://dnacapital.com" target="_blank">
-        <i class="fa-solid fa-link"></i>
-        <span>Source</span>
-      </a>
-      
-      <a id="yt-link" class="meta-link" href="https://youtu.be/NUeCNvYY_x4" target="_blank">
-        <i class="fa-brands fa-youtube"></i>
-        <span>2.5 min tutorial</span>
-      </a>
+    Hello, world!
 </body>
 </html>
