--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,9 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link href="/static/styles.css" rel="stylesheet">
+    
+    <title>NomeWork: {% block title %}{% endblock %} </title>
 </head>
 <body>
-    
+    <img src="">
+    <nav>
+        <ul>
+            <li><a href="/">Home</a></li>
+            <li><a href="/timer">Timer</a></li>
+            <li><a href="/analytics">Analytics</a></li>
+            <li><a href="/login">Login</a></li>
+            <li><a href="/register">Register</a></li>
+        </ul>
+    </nav>
+
+    {% block body %}{% endblock %}
 </body>
 </html>
