--- a/templates/timertest.html
+++ b/templates/timertest.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TimerTest</title>
-    <link href="styles.css" rel="stylesheet"/>
+    <link href="/static/styles.css" rel="stylesheet"/>
 </head>
 <body>
     <div class="watch">
@@ -19,9 +19,9 @@
             <button id="reset">Reset</button>
             <button id="submit">Submit</button>
         </div>
-        
+
     </div>
 
-    <script src="timer.js"></script>
+    <script src="/templates/timer.js"></script>
 </body>
 </html>
