--- a/templates/timertest.html
+++ b/templates/timertest.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TimerTest</title>
     <link href="/static/styles.css" rel="stylesheet"/>
-    <script src="timer.js"></script>
+    <script src="/templates/timer.js"></script>
 </head>
 <body>
     <div class="watch">
