--- a/templates/timertest.html
+++ b/templates/timertest.html
@@ -5,8 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TimerTest</title>
-    <link href="/static/styles.css" rel="stylesheet"/>
-    <script src="/templates/timer.js"></script>
+    
+    <link href="{{ url_for('static', filename='style.css') }}" rel="stylesheet"/>
+    <script type="text/javascript" src="{{ url_for('static', filename='script.js') }}"></script>
+    
 </head>
 <body>
     <div class="watch">
@@ -20,7 +22,7 @@
             <button id="reset">Reset</button>
             <button id="submit">Submit</button>
         </div>
-
     </div>
+    
 </body>
 </html>
