--- a/templates/timertest.html
+++ b/templates/timertest.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TimerTest</title>
     
-    <link href="{{ url_for('static', filename='style.css') }}" rel="stylesheet"/>
-    <script type="text/javascript" src="{{ url_for('static', filename='script.js') }}"></script>
+    <link href="/static/styles.css" rel="stylesheet"/>
+    <script type="text/javascript" src="/static/script.js"></script>
     
 </head>
 <body>
