--- a/templates/timer.html
+++ b/templates/timer.html
@@ -5,5 +5,17 @@
 {% endblock %}
 
 {% block body %}
+<div class="watch">
 
+    <div class="time">
+        00:00:00
+    </div>
+    <div class="controls">
+        <button id="start">Start</button>
+        <button id="stop">Stop</button>
+        <button id="reset">Reset</button>
+        <button id="submit">Submit</button>
+        <script type="text/javascript" src="/static/script.js"></script>
+    </div>
+</div>
 {% endblock %}
