--- a/templates/timer.html
+++ b/templates/timer.html
@@ -14,7 +14,7 @@
         <button id="stop">Stop</button>
         <button id="reset">Reset</button>
         <button id="submit">Submit</button>
-        <script type="text/javascript" src="/static/script.js"></script>
+        <script type="text/javascript" src="/static/timer.js"></script>
     </div>
 </div>
 {% endblock %}
