--- a/templates/index.html
+++ b/templates/index.html
@@ -11,10 +11,8 @@
     <div id="menu">
         <div id="menu-items">
           <!-- I made these divs instead of links so you can click on mobile to view the effect -->
-          <div class="menu-item">Home</div>
-          <div class="menu-item">Shop</div>
-          <div class="menu-item">About</div>
-          <div class="menu-item">Contact Us</div>
+          <div class="menu-item" href="/login">Login</div>
+          <div class="menu-item" href="/register">Register</div>
         </div>
         <div id="menu-background-pattern"></div>
         <div id="menu-background-image"></div>
