--- a/static/index.css
+++ b/static/index.css
@@ -1,5 +1,12 @@
+:root {
+  --primary: crimson;
+  --dark: #1f2937;
+  --darkdark: #111827;
+  --light: #F3F4F6;
+}
+
 body {
-    background-color: rgb(20, 20, 20);
+    background-color: var(--dark);
     margin: 0px;
   }
   
@@ -32,22 +39,6 @@ body {
     background-position: 0% -100%;
   }
   
-  #menu[data-active-index="0"] > #menu-background-image {
-    background-position: center 45%;
-  }
-  
-  #menu[data-active-index="1"] > #menu-background-image {
-    background-position: center 50%;
-  }
-  
-  #menu[data-active-index="2"] > #menu-background-image {
-    background-position: center 55%;
-  }
-  
-  #menu[data-active-index="3"] > #menu-background-image {
-    background-position: center 60%;
-  }
-  
   #menu-background-pattern {
     background-image: radial-gradient(
       rgba(255, 255, 255, 0.1) 9%, 
@@ -66,31 +57,12 @@ body {
     z-index: 1;
   }
   
-  #menu-background-image {
-    background-image: url('/static/brain.jpeg');
-    background-position: center 40%;
-    background-size: 110vmax;
-    height: 100%;
-    left: 0px;  
-    opacity: 0.15;
-    position: absolute;
-    top: 0px;
-    transition: opacity 800ms ease,
-      background-size 800ms ease,
-      background-position 800ms ease;
-    width: 100%;
-    z-index: 0;
-  }
   
   #menu-items:hover ~ #menu-background-pattern {
     background-size: 11vmin 11vmin;
     opacity: 0.5;
   }
   
-  #menu-items:hover ~ #menu-background-image {
-    background-size: 100vmax;
-    opacity: 0.1;
-  }
   
   #menu-items:hover > .menu-item {
     opacity: 0.3;
@@ -110,55 +82,4 @@ body {
     text-decoration: none;
     transition: opacity 400ms ease;
   }
-  
-  /* -- YouTube Link Styles -- */
-  
-  body.menu-toggled > .meta-link > span {
-    color: rgb(30, 30, 30);
-  }
-  
-  #source-link {
-    bottom: 60px;
-  }
-  
-  #source-link > i {
-    color: rgb(94, 106, 210);
-  }
-  
-  #yt-link > i {
-    color: rgb(239, 83, 80);
-  }
-  
-  .meta-link {
-    align-items: center;
-    backdrop-filter: blur(3px);
-    background-color: rgba(255, 255, 255, 0.05);
-    border: 1px solid rgba(255, 255, 255, 0.1);
-    border-radius: 6px;
-    bottom: 10px;
-    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.1);
-    cursor: pointer;  
-    display: inline-flex;
-    gap: 5px;
-    left: 10px;
-    padding: 10px 20px;
-    position: fixed;
-    text-decoration: none;
-    transition: background-color 400ms, border-color 400ms;
-    z-index: 10000;
-  }
-  
-  .meta-link:hover {
-    background-color: rgba(255, 255, 255, 0.1);
-    border: 1px solid rgba(255, 255, 255, 0.2);
-  }
-  
-  .meta-link > i, .meta-link > span {
-    height: 20px;
-    line-height: 20px;
-  }
-  
-  .meta-link > span {
-    color: white;
-    font-family: "Rubik", sans-serif;
-  }
+ 
