login and register mostly

--- a/static/styles.css
+++ b/static/styles.css
@@ -8,7 +8,7 @@
 * {
     box-sizing: border-box;
     margin: 0;
-    font-family: 'Fira sans', sans-serif;
+    font-family: 'Ibarra Real Nova', serif;
 }
 
 body {
