--- a/templates/login.html
+++ b/templates/login.html
@@ -5,5 +5,26 @@
 {% endblock %}
 
 {% block body %}
-
+   <body>
+    <link rel="stylesheet" href="/static/login.css">
+      <div class="wrapper">
+         <div class="title">
+            Login
+         </div>
+         <form action="#">
+            <div class="field">
+               <input id="username" name="username" placeholder="Username" type="text" required>
+            </div>
+            <div class="field">
+               <input id="password" name="password" placeholder="Password" type="password" required>
+            </div>
+            <div class="field">
+               <input type="submit" value="Login">
+            </div>
+            <div class="signup-link">
+               Not a member? <a href="/register">Signup now</a>
+            </div>
+         </form>
+      </div>
+   </body>
 {% endblock %}
