--- a/templates/register.html
+++ b/templates/register.html
@@ -1,9 +1,30 @@
 {% extends "layout.html" %}
 
 {% block title %}
-    Register
+    Login
 {% endblock %}
 
 {% block body %}
-
+   <body>
+    <link rel="stylesheet" href="/static/login.css">
+      <div class="wrapper">
+         <div class="title">
+            Register
+         </div>
+         <form action="#">
+            <div class="field">
+               <input id="username" name="username" placeholder="Username" type="text" required>
+            </div>
+            <div class="field">
+               <input id="password" name="password" placeholder="Password" type="password" required>
+            </div>
+            <div class="field">
+                <input id="confirmation" name="confirmation" placeholder="Confirm Password" type="password"required>
+             </div>
+            <div class="field">
+               <input type="submit" value="Register">
+            </div>
+         </form>
+      </div>
+   </body>
 {% endblock %}
