--- a/static/login.css
+++ b/static/login.css
@@ -107,7 +107,7 @@ form .field input[type="submit"]{
   font-size: 20px;
   font-weight: 500;
   cursor: pointer;
-  background: #111827;
+  background: #1f2937;
   transition: all 0.3s ease;
 }
 form .field input[type="submit"]:active{
