--- a/static/style.css
+++ b/static/style.css
@@ -1,69 +1,3 @@
-:root {
-    --primary: crimson;
-    --dark: #1f2937;
-    --darkdark: #111827;
-    --light: #F3F4F6;
-}
-
-* {
-    box-sizing: border-box;
-    margin: 0;
-}
-
-body {
-    background: var(--dark);
-    color: var(--light);
-}
-
-.watch {
-    text-align: center;
-    background-color: var(--darkdark);
-    width: 100%;
-    max-width: 360px;
-    margin: 4rem auto;
-    padding: 1rem 2rem;
-    border-radius: 1rem;
-}
-
-.time {
-    font-size: 5rem;
-    font-weight: 300;
-    margin-bottom: 1rem;
-}
-
-.controls {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: auto;
-}
-
-.controls button {
-    appearance: none;
-    background: none;
-    border: none;
-    outline: none;
-    user-select: none;
-    cursor: pointer;
-
-    color: var(--light);
-    font-size: 1.125rem;
-    background-color: var(--primary);
-    margin: 0 0.5rem;
-    padding: 0.5rem 1rem;
-    border-radius: 0.5rem;
-
-    transition: 0.4s
-}
-
-button:hover {
-    opacity: 0.7;
-}
-
-button:active {
-    background-color: var(--dark);
-}
-
 /*
  * Globals
  */
@@ -92,7 +26,7 @@ a:hover {
 
 html,
 body {
-  height: 100%;
+  height: 100vh;
   background-color: #fff;
 }
 body {
