--- a/static/style.css
+++ b/static/style.css
@@ -3,6 +3,13 @@
  */
 
 /* Links */
+:root {
+    --primary: crimson;
+    --dark: #1f2937;
+    --darkdark: #111827;
+    --light: #F3F4F6;
+}
+
 a,
 a:focus,
 a:hover {
@@ -26,9 +33,13 @@ a:hover {
 
 html,
 body {
-  height: 100vh;
-  background-color: #fff;
+  background-color: var(--dark);
+  margin: 0; 
+  height: 100%; 
+  overflow: hidden
+
 }
+
 body {
   color: #fff;
   text-align: center;
@@ -40,7 +51,7 @@ body {
   display: table;
   width: 100%;
   height: 600px;
-  background-color: #333;
+  background-color: var(--dark);
   /*height: 100%; */
   /*min-height: 100%;*/
 }
