--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@
                 <nav>
                   <ul class="nav masthead-nav">
                     <li class="active"><a href="#">Home</a></li>
-                    <li><a href="#">Timer</a></li>
+                    <li><a href="/timer">Timer</a></li>
                     <li><a href="#">Analytics</a></li>
                   </ul>
                 </nav>
