--- a/templates/index.html
+++ b/templates/index.html
@@ -1,51 +1,24 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+{% extends "layout.html" %}
 
-    <!-- http://getbootstrap.com/docs/5.1/ -->
-    <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" rel="stylesheet">
-    <script crossorigin="anonymous" src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"></script>
+{% block title %}
+    Welcome
+{% endblock %}
 
-    <link href="/static/style.css" rel="stylesheet">
-</head>
-<body>
+{% block body %}
+    <main role="main" class="inner cover">
+    <h1 class="cover-heading">Welcome to Nomework.</h1>
+    <p class="lead">An application for students, by students. Track your study times of each class and access the infomration whenever. Simply start and stop the timer at the beginning and end of each of your study sessions, and save the information by clicking submit!</p>
+    <p class="lead">
+        <a href="/login" class="btn btn-lg btn-secondary">Login</a>
+        <a href="/register" class="btn btn-lg btn-secondary">Register</a>
+    </p>
+    </main>
     
-    <div class="site-wrapper">
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script>window.jQuery || document.write('<script src="../../../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
+    <script src="../../../../assets/js/vendor/popper.min.js"></script>
+    <script src="../../../../dist/js/bootstrap.min.js"></script>
 
-        <div class="site-wrapper-inner">
-  
-          <div class="container">
-  
-            <div class="masthead clearfix">
-              <div class="container inner">
-                <h3 class="masthead-brand">Nomework</h3>
-                <nav>
-                  <ul class="nav masthead-nav">
-                    <li class="active"><a href="#">Home</a></li>
-                    <li><a href="#">Timer</a></li>
-                    <li><a href="#">Analytics</a></li>
-                  </ul>
-                </nav>
-              </div>
-            </div>
-  
-            <div class="inner cover">
-              <h1 class="cover-heading">Welcome to Nomework.</h1>
-              <p class="lead">An application for students, by students. Track your study times of each class and access the infomration whenever. Simply start and stop the timer at the beginning and end of each of your study sessions, and save the information by clicking submit!</p>
-              <p class="lead">
-                <a href="#" class="btn btn-lg btn-default">Login</a>
-                <a href="#" class="btn btn-lg btn-default">Register</a>
-              </p>
-            </div>
-  
-          </div>
-  
-        </div>
-  
-      </div>
-</body>
-</html>
+{% endblock %}
