--- a/templates/index.html
+++ b/templates/index.html
@@ -20,37 +20,4 @@
     <script>window.jQuery || document.write('<script src="../../../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
     <script src="../../../../assets/js/vendor/popper.min.js"></script>
     <script src="../../../../dist/js/bootstrap.min.js"></script>
-
-        <div class="site-wrapper-inner">
-  
-          <div class="container">
-  
-            <div class="masthead clearfix">
-              <div class="container inner">
-                <h3 class="masthead-brand">Nomework</h3>
-                <nav>
-                  <ul class="nav masthead-nav">
-                    <li class="active"><a href="#">Home</a></li>
-                    <li><a href="/timer">Timer</a></li>
-                    <li><a href="#">Analytics</a></li>
-                  </ul>
-                </nav>
-              </div>
-            </div>
-  
-            <div class="inner cover">
-              <h1 class="cover-heading">Welcome to Nomework.</h1>
-              <p class="lead">An application for students, by students. Track your study times of each class and access the infomration whenever. Simply start and stop the timer at the beginning and end of each of your study sessions, and save the information by clicking submit!</p>
-              <p class="lead">
-                <a href="#" class="btn btn-lg btn-default">Login</a>
-                <a href="#" class="btn btn-lg btn-default">Register</a>
-              </p>
-            </div>
-  
-          </div>
-  
-        </div>
-  
-      </div>
-</body>
-</html>
+{% endblock %}
