--- a/templates/login.html
+++ b/templates/login.html
@@ -11,7 +11,7 @@
          <div class="title">
             Login
          </div>
-         <form action="#">
+         <form action="/login" method="post">
             <div class="field">
                <input id="username" name="username" placeholder="Username" type="text" required>
             </div>
