--- a/templates/register.html
+++ b/templates/register.html
@@ -10,7 +10,7 @@
          <div class="title">
             Register
          </div>
-         <form action="#">
+         <form action="/register" method="post">
             <div class="field">
                <input id="username" name="username" placeholder="Username" type="text" required>
             </div>
