--- a/templates/timer.html
+++ b/templates/timer.html
@@ -14,6 +14,7 @@
         <button id="stop">Stop</button>
         <button id="reset">Reset</button>
         <button id="submit">Submit</button>
+        <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.5/jquery.min.js"></script>
         <script type="text/javascript" src="/static/timer.js"></script>
     </div>
 </div>
