--- a/templates/layout.html
+++ b/templates/layout.html
@@ -24,14 +24,15 @@
           <h3 class="masthead-brand" href="/">Nomework</h3>
     
           <nav class="nav nav-masthead justify-content-center">
+        {% if session["user_id"] == false %}
             <a class="nav-link" href="/">Home</a>
-        {% if session["user_id"] %}
+        {% else %}
             <a class="nav-link" href="/classes">Home</a>
             <a class="nav-link" href="/timer">Timer</a>
             <a class="nav-link" href="/analytics">Analytics</a>
             <a class="nav-link" href="/logout">Logout</a>
           </nav>
-          {% endif %}
+        {% endif %}
         </div>
       </header>
 
