--- a/templates/timer.html
+++ b/templates/timer.html
@@ -5,6 +5,7 @@
 {% endblock %}
 
 {% block body %}
+<h1 class="cover-heading">Timer</h1>
 <div class="watch">
     <div class="time">
         00:00:00
