--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -1,12 +1,28 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
-</html>
+{% extends "layout.html" %}
+
+{% block title %}
+    User Home
+{% endblock %}
+
+{% block body %}
+<main role="main" class="inner cover">
+    <h1 class="cover-heading">Classes</h1>
+    <table>
+        <tr>
+          <th>Class Name</th>
+          <th>Days</th>
+          <th>Credits</th>
+        </tr>
+        <tr>
+          <td>Alfreds Futterkiste</td>
+          <td>Maria Anders</td>
+          <td>Germany</td>
+        </tr>
+        <tr>
+          <td>Centro comercial Moctezuma</td>
+          <td>Francisco Chang</td>
+          <td>Mexico</td>
+        </tr>
+      </table>
+</main>
+{% endblock %}
