--- a/templates/layout.html
+++ b/templates/layout.html
@@ -21,13 +21,11 @@
     <div class="cover-container d-flex h-100 p-3 mx-auto flex-column">
       <header class="masthead mb-auto">
         <div class="inner">
-          <h3 class="masthead-brand" href="/">Nomework</h3>
-    
+          <!-- <h3 class="masthead-brand" href="/">Nomework</h3> -->
+          <h3><a class='masthead-brand' href="/">Nomework</a></h3>
           <nav class="nav nav-masthead justify-content-center">
-        {% if session["user_id"] == false %}
-            <a class="nav-link" href="/">Home</a>
-        {% else %}
-            <a class="nav-link" href="/classes">Home</a>
+        {% if session["user_id"] %}
+        <a class="nav-link" href="/homepage">Home</a>
             <a class="nav-link" href="/timer">Timer</a>
             <a class="nav-link" href="/analytics">Analytics</a>
             <a class="nav-link" href="/logout">Logout</a>
