--- a/templates/index.html
+++ b/templates/index.html
@@ -1,23 +1,28 @@
 {% extends "layout.html" %}
 
 {% block title %}
-    Welcome
+    User Home
 {% endblock %}
 
 {% block body %}
-    <main role="main" class="inner cover">
-    <h1 class="cover-heading">Welcome to Nomework.</h1>
-    <p class="lead">An application for students, by students. Track your study times of each class and access the infomration whenever. Simply start and stop the timer at the beginning and end of each of your study sessions, and save the information by clicking submit!</p>
-    <p class="lead">
-        <a href="/login" class="btn btn-lg btn-secondary">Login</a>
-        <a href="/register" class="btn btn-lg btn-secondary">Register</a>
-    </p>
-    </main>
-    
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script>window.jQuery || document.write('<script src="../../../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
-    <script src="../../../../assets/js/vendor/popper.min.js"></script>
-    <script src="../../../../dist/js/bootstrap.min.js"></script>
+<main role="main" class="inner cover">
+    <h1 class="cover-heading">Classes</h1>
+    <table>
+        <tr>
+          <th>Class Name</th>
+          <th>Days</th>
+          <th>Credits</th>
+        </tr>
+        <tr>
+          <td>Alfreds Futterkiste</td>
+          <td>Maria Anders</td>
+          <td>Germany</td>
+        </tr>
+        <tr>
+          <td>Centro comercial Moctezuma</td>
+          <td>Francisco Chang</td>
+          <td>Mexico</td>
+        </tr>
+      </table>
+</main>
 {% endblock %}
