--- a/templates/index.html
+++ b/templates/index.html
@@ -7,22 +7,30 @@
 {% block body %}
 <main role="main" class="inner cover">
     <h1 class="cover-heading">Classes</h1>
-    <table>
-        <tr>
-          <th>Class Name</th>
-          <th>Days</th>
-          <th>Credits</th>
-        </tr>
-        <tr>
-          <td>Alfreds Futterkiste</td>
-          <td>Maria Anders</td>
-          <td>Germany</td>
-        </tr>
-        <tr>
-          <td>Centro comercial Moctezuma</td>
-          <td>Francisco Chang</td>
-          <td>Mexico</td>
-        </tr>
-      </table>
+    <table class="table">
+        <thead>
+            <th class="text-start">Class Name</th>
+            <th class="text-end">Hours Spent</th>
+        </thead>
+        <tbody>
+            {% for stock in stocks %}
+            <tr>
+                <td class="text-start">{{ stock["stock_symbol"] }}</td>
+                <td class="text-end">{{ stock["shares"] }}</td>
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
 </main>
+<div>
+    <form>
+        <div class="form-group">
+          <label for="classname">Add Class</label>
+          <input type="text" class="form-control" id="classname" placeholder="Class Name">
+        </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
+</div>
+
+  
 {% endblock %}
