--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
 {% block body %}
 <main role="main" class="inner cover">
     <h1 class="cover-heading">Classes</h1>
-    <table class="table">
+    <table class="table table-dark">
         <thead>
             <th class="text-start">Class Name</th>
             <th class="text-end">Hours Spent</th>
