--- a/templates/index.html
+++ b/templates/index.html
@@ -13,9 +13,9 @@
             <th class="text-end">Hours Spent</th>
         </thead>
         <tbody>
-            {% for classes in userclasses %}
+            {% for class in classes %}
                 <tr>
-                    <td class="text-start">{{ classes }}</td>
+                    <td class="text-start">{{ class }}</td>
                     <!-- <td class="text-end">{{ times }}</td> -->
                 </tr>
             {% endfor %}
