--- a/templates/timer.html
+++ b/templates/timer.html
@@ -7,17 +7,17 @@
 {% block body %}
 <h1 class="cover-heading">Timer</h1>
 <div class="mb-3">
-    <form id="class" name="class">
-        <select class="form-select mx-auto w-auto">
-            <!--Dropdown for classes -->
-            <option disabled selected>Class</option>
-            {% for class in classes %}
-    
-                <option value="{{ class }}"> {{ class }} </option>
-    
-            {% endfor %}
-        </select>
-    </form>
+
+    <select class="form-select mx-auto w-auto" id="class">
+        <!--Dropdown for classes -->
+        <option disabled selected>Class</option>
+        {% for class in classes %}
+
+            <option value="{{ class }}"> {{ class }} </option>
+
+        {% endfor %}
+    </select>
+
 </div>
 <div class="watch">
     <div class="time">
