--- a/templates/timer.html
+++ b/templates/timer.html
@@ -8,7 +8,7 @@
 <h1 class="cover-heading">Timer</h1>
 <div class="mb-3">
 
-    <select class="form-select mx-auto w-auto" id="class">
+    <select class="form-select mx-auto w-auto" id="class" name="class">
         <!--Dropdown for classes -->
         <option disabled selected>Class</option>
         {% for class in classes %}
