--- a/templates/timer.html
+++ b/templates/timer.html
@@ -27,8 +27,8 @@
         <button id="start">Start</button>
         <button id="stop">Stop</button>
         <button id="reset">Reset</button>
-        <form action="/timer" method="post">
-            <button id="submit" onclick="submit()">Submit</button>
+        <form action="/submit" method="post">
+            <button id="submit">Submit</button>
         </form>
         <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.5/jquery.min.js"></script>
         <script type="text/javascript" src="/static/timer.js"></script>
