--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,9 @@
                 <tr>
                     <td class="text-start">{{ data[0] }}</td>
                     <td class="text-end">{{ data[1] }}</td>
-                    <td class="text-end"><button type="submit" class="btn btn-danger">Delete Class</button></td>
+                    <form action="/delete" method="post">
+                        <td class="text-end"><button type="submit" class="btn btn-danger">Delete Class</button></td>
+                    </form>
                 </tr>
             {% endfor %}
             
