--- a/templates/layout.html
+++ b/templates/layout.html
@@ -14,6 +14,10 @@
 
     <!-- Custom styles for this template -->
     <link href="/static/cover.css" rel="stylesheet">
+
+    <!--Chart generator-->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js"></script>
+
   </head>
 
   <body class="text-center">
