--- a/templates/analytics.html
+++ b/templates/analytics.html
@@ -8,14 +8,16 @@
 
 <div id="selectclass">
     <form action="/analytics" method="POST">
-        <select class="form-select mx-auto w-auto" id="classanalytics" name="classanalytics">
-            <option disabled selected>Class</option>
-            {% for class in classes %}
-
-                <option value="{{ class }}"> {{ class }} </option>
-
-            {% endfor %}
-        </select>
+        <div class="form-group">
+            <select class="btn btn-secondary btn-lg dropdown-toggle" id="classanalytics" name="classanalytics">
+                <option disabled selected>Class</option>
+                {% for class in classes %}
+    
+                    <option value="{{ class }}"> {{ class }} </option>
+    
+                {% endfor %}
+            </select>
+        </div>
         <div>
             <button class="btn btn-primary btn-sm" type="submit">Generate Graph</button>
         </div>
