--- a/templates/analytics.html
+++ b/templates/analytics.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block body %}
-
+<!--Dropdown for classes-->
 <div id="selectclass">
     <form action="/analytics" method="POST">
         <div class="form-group">
@@ -27,7 +27,7 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    
+    <!--Generate Graph-->
     <script>
         const ctx = document.getElementById('myChart');
     
