--- a/templates/login.html
+++ b/templates/login.html
@@ -5,6 +5,7 @@
 {% endblock %}
 
 {% block body %}
+<!--Constructs login form with two field entries-->
    <body>
     <link rel="stylesheet" href="/static/login.css">
       <div class="wrapper">
