--- a/templates/register.html
+++ b/templates/register.html
@@ -5,6 +5,7 @@
 {% endblock %}
 
 {% block body %}
+<!--Constructs registration form with three field entries-->
    <body>
       <div class="wrapper">
          <div class="title">
