--- a/templates/timer.html
+++ b/templates/timer.html
@@ -5,12 +5,13 @@
 {% endblock %}
 
 {% block body %}
+<!--Title and Instructions -->
 <h1 class="cover-heading">Timer</h1>
 <p> Start the timer when you begin work for a class and stop the timer when your work is complete. 
     Submit the time and then submit the class directly after. Good luck studying! </p>
 
 
-
+<!--Timer Implementation -->
 <div class="watch">
     <div class="time">
         00:00:00
