--- a/templates/home.html
+++ b/templates/home.html
@@ -5,6 +5,7 @@
 {% endblock %}
 
 {% block body %}
+    <!--Welcome page-->
     <main role="main" class="inner cover">
     <h1 class="cover-heading">Welcome to Nomework.</h1>
     <p class="lead">An application for students, by students. Track your study times of each class and access the infomration whenever. Simply start and stop the timer at the beginning and end of each of your study sessions, and save the information by clicking submit!</p>
